src/components/common/Common.module.css
/* ... */
.viewTiming {
    padding: 0px 20px 10px 20px;
}

.notViewTiming {
    display: none;
}

.viewTiming .separator {
    border-top: solid 1px #e6e6e6;
    margin-bottom: 20px;
}

.viewTiming .viewSeparator {
    border-top: solid 1px transparent;
    margin-bottom: 20px;
}

.timingCardItem {
    margin: 10px 0px;
    background-color: #e6e6e6;
    border: 1px solid #b5b5b6;
    border-radius: 10px;
    padding: 4px 12px;
}

.timingCardItem .timeSlot {
    padding: 4px 0 !important;
    width: 190px;
    color: #0b0b0c;
    font-size: 14px;
    font-weight: 500;
    line-height: 22px;
}

.timingCardItem .timeLabel {
    padding-left: 0 !important;
    color: #858585;
    font-size: 14px;
    font-weight: 400;
    line-height: 22px;
}

.timingCardItem .timeSlotClearBtn {
    display: flex;
    align-items: center;
}

.viewTiming .timingCardItem:first-child {
    margin-top: 10px;
}

.timingCardItem :global .ant-descriptions .ant-descriptions-row>th,
.timingCardItem :global .ant-descriptions .ant-descriptions-row>td {
    padding-bottom: 0px;
}

.masterListSearchForm :global .ant-form-item {
    margin-bottom: 0px;
}

.masterListSearchForm :global .ant-form-item .ant-form-item-label>label {
    margin-right: 12px;
    margin-left: 10px;
}

.masterListSearchForm :global .ant-form-item .ant-form-item-explain-error,
.selectSearchBg :global .ant-form-item .ant-form-item-explain .ant-form-item-explain-error {
    margin-bottom: -18px;
    margin-top: -2px;
}

.selectSearchBg :global .ant-form-vertical .ant-form-item:first-child .ant-form-item-explain .ant-form-item-explain-error {
    margin-top: 1px;
}

.selectSearchBg :global .ant-form-vertical .ant-form-item:last-child .ant-form-item-explain .ant-form-item-explain-error {
    position: absolute;
    left: 140px;
}

/* Customer Master Styles */
.selectSearchBg {
    height: 36px;
    background-color: #ffffff;
    padding: 4px 6px;
    border: 1px solid #b5b5b6;
    border-radius: 4px;
}

.contentHeaderBackground .subheading .selectSearchBg .headerSelectField,
.contentHeaderBackground .selectSearchBg .headerSelectField {
    width: 140px;
    position: absolute;
    z-index: 99;
    top: 0;
}

.contentHeaderBackground .subheading .selectSearchBg .headerSearchField,
.contentHeaderBackground .selectSearchBg .headerSearchField {
    width: calc(100% - 136px);
    float: right;
}

.contentHeaderBackground .subheading .selectSearchBg .headerSearchField :global .ant-input-group button,
.contentHeaderBackground .selectSearchBg .headerSearchField :global .ant-input-group button {
    width: 20px;
}

.selectSearchBg :global .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
    height: 26px;
    /* margin-right: 20px; */
}

.selectSearchBg :global .ant-select-single:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-search-input {
    height: 18px;
}

.contentHeaderBackground .selectSearchBg :global .ant-form-item .ant-form-item-control-input {
    min-height: 26px;
}

.selectSearchBg .headerSelectField :global .ant-select-selector {
    background: #e6e6e6;
}

.selectSearchBg .headerSelectField :global .ant-select-selector .ant-select-selection-placeholder,
.selectSearchBg .headerSelectField :global .ant-select-selector .ant-select-selection-item {
    padding-inline-end: 12px;
    color: #0b0b0c;
    font-size: 12px;
    font-weight: 500;
    line-height: 24px;
}

.selectSearchBg .headerSearchField :global .ant-input-group {
    border: none;
}

.selectSearchBg .headerSearchField :global .ant-input-group .ant-input-group-addon button {
    box-shadow: none;
    margin-right: -6px;
}

.selectSearchBg .headerSearchField :global .ant-input-group .ant-input::placeholder {
    color: red;
    font-size: 14px;
    font-weight: 400;
    color: #b5b5b6;
}

.drawerBodyLeft {
    background: #f2f2f2;
    /* padding: 20px; */
    height: calc(100vh - 60px);
    overflow-y: overlay;
}

.drawerBodyLeft::-webkit-scrollbar-track {
    background-color: #f4f4f4;
}

.drawerBodyLeft::-webkit-scrollbar {
    background-color: #f4f4f4;
    width: 8px;
}

.drawerBodyLeft::-webkit-scrollbar-thumb {
    background-color: #c1c1c1;
    border-radius: 10px;
    border: 2px solid #f4f4f4;
}

.drawerBodyLeft::-webkit-scrollbar-thumb:hover {
    border: 2px solid #c1c1c1;
}

.drawerBodyLeft :global .ant-collapse {
    background: #f2f2f2;
    border: 0.5px solid #b5b5b6;
    margin: 30px 30px 33px 30px;
}

.drawerBodyLeft :global .ant-collapse>.ant-collapse-item>.ant-collapse-header {
    padding: 12px 16px 16px;
    align-items: center;
}

/* .drawerBodyLeft :global .ant-collapse>.ant-collapse-item-active>.ant-collapse-header {
    padding-bottom: 10px;
} */

.drawerBodyLeft :global .ant-collapse>.ant-collapse-item>.ant-collapse-header .ant-collapse-header-text .ant-space {
    gap: 10px !important;
    margin-bottom: 16px;
}

.drawerBodyLeft :global .ant-collapse>.ant-collapse-item>.ant-collapse-header .ant-collapse-header-text .ant-space .ant-space-item h5 {
    margin-top: 0;
    margin-bottom: 0;
    color: #ff3e5b;
    font-weight: 700;
    font-size: 18px;
    line-height: 27px;
}

.drawerBodyLeft :global .ant-collapse>.ant-collapse-item>.ant-collapse-header .ant-collapse-header-text .ant-space .ant-space-item span.ant-typography {
    color: #0b0b0c;
    font-size: 14px;
    line-height: 23px;
}

.drawerBodyLeft :global .ant-collapse .ant-collapse-content {
    border-top: none;
}

.drawerBodyLeft :global .ant-collapse .ant-collapse-content>.ant-collapse-content-box {
    background: #f2f2f2;
    border-radius: 0 0 4px 4px;
    padding: 0 16px 12px;
}

.drawerBodyLeft :global .ant-collapse .ant-collapse-content>.ant-collapse-content-box p {
    padding-left: 0 !important;
    font-size: 14px;
    font-weight: 500;
    line-height: 24px;
    color: #545454;
}
/* ... */

